# stagingPlatform

./: .editorconfig  .gitignore  .prettierignore  README.md  RELEASE_NOTES_TEMPLATE.md  SECURITY.md  VERSION  action.yml  go.mod  package-lock.json  package.json  stagehand.test.yml  stagehand.yml
.github/: dependabot.yml
ProductDocumentations/: Code-Modules-Types-and-EntryPoints.md  README.md  Stagehand-Product-Thesis.md  Tracked-File-Inventory.md  Work-Completed-and-Current-State.md
conformance/: smoke.yml  stripe-refund-smoke.yml
dashboard/: README.md
docs/: artifact-schema.md  assertion-schema.md  baseline-ci.md  behavior-contract-schema.md  config-schema.md  conformance-case-model.md  custom-api-generic-http.md  custom-tool-wrapper.md  epic-y-test-plan.md  error-injection.md  existing-agent-harness.md  first-run-onboarding.md  getting-started.md  github-action.md  install.md  limitations.md  release-gate-schema.md  release.md  retention-deletion.md  runtime-error-injection.md  runtime-event-queue.md  runtime-fallback-tiers.md  runtime-resilience.md  scrubbing.md  (+14 more)
sdk/python/: README.md  pyproject.toml
sdk/python/stagehand/: __init__.py  _capture.py  _config.py  _httpx.py  _injection.py  _openai.py  _providers.py  _runtime.py  _stripe.py  _tools.py  _version.py
sdk/python/tests/: __init__.py  conftest.py  test_concurrency.py  test_config_parity.py  test_generic_http_simulation.py  test_httpx_interception.py  test_internal_apis_e2e.py  test_parity.py  test_smoke.py  test_stripe_sdk_interception.py  test_support_escalation_example.py  test_tool_wrapper.py
(+199 files in other folders)
